--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -23,6 +23,7 @@
     ]
   },
   "require": {
-    "phpmailer/phpmailer": "~6.1"
+    "phpmailer/phpmailer": "~6.1",
+    "league/plates": "v4.0.0-alpha"
   }
 }
