--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -26,6 +26,7 @@
     "phpmailer/phpmailer": "~6.1",
     "league/plates": "v4.0.0-alpha",
     "coffeecode/uploader": "1.0.*",
-    "coffeecode/cropper": "1.3.*"
+    "coffeecode/cropper": "1.3.*",
+    "coffeecode/optimizer": "1.0.0"
   }
 }
