--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -27,6 +27,7 @@
     "league/plates": "v4.0.0-alpha",
     "coffeecode/uploader": "1.0.*",
     "coffeecode/cropper": "1.3.*",
-    "coffeecode/optimizer": "1.0.0"
+    "coffeecode/optimizer": "1.0.0",
+    "coffeecode/paginator": "1.0.0"
   }
 }
