--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "coffeecode/uploader": "^1.0",
     "coffeecode/cropper": "^1.0",
     "coffeecode/optimizer": "^1.0",
-    "coffeecode/paginator": "^1.0"
+    "coffeecode/paginator": "^1.0",
+    "coffeecode/router": "^1.0"
   }
 }
