--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "upinside/fsphp",
+  "name": "pedroleandro/fsphp",
   "description": "Formação Full Stack PHP Developer",
   "minimum-stability": "stable",
   "authors": [
@@ -18,9 +18,9 @@
       "Source\\": "source/"
     },
     "files": [
-      "source/Support/Config.php",
-      "source/Support/Helpers.php",
-      "source/Support/Minify.php"
+      "source/Boot/Config.php",
+      "source/Boot/Helpers.php",
+      "source/Boot/Minify.php"
     ]
   },
   "require": {
